--- a/css/index.css
+++ b/css/index.css
@@ -2,3 +2,24 @@
     margin: 0;
     padding: 0;
 }
+div {
+    background: inherit; /*继承父类背景*/
+    width: 250px;
+    height: 350px;
+    position: absolute;
+    overflow: hidden;  /* 隐藏溢出内容 */
+}
+
+div:before {
+    content: "";  /* 设置伪元素的内容为空字符串 */
+    width: 300px;
+    height: 400px;
+    background: inherit;
+    position: absolute;
+    left: -25px;  /* 微调左边位置 */
+    right: 0;
+    top: -25px;  /* 微调上方位置 */
+    bottom: 0;
+    box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.3);
+    filter: blur(10px);
+}
